Fixed table right panel alignment issue

--- a/src/assets/scss/plugins/_tables.scss
+++ b/src/assets/scss/plugins/_tables.scss
@@ -407,8 +407,6 @@ tr.group:hover {
   }
 
   .right {
-    flex: 10%;
-    height: 60px;
     display: table-cell;
     vertical-align: middle;
     text-align: center;
